--- a/style.css
+++ b/style.css
@@ -7,6 +7,6 @@
     background-color: rgba(34, 244, 218, 1);
 }
 h2{
-    padding-top: 102px;
-    padding-left: 622px;
+    text-align: center;
+    padding-top: 20px;
 }
