--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-.box{
-    width: 1249px;
-    height: 376px;
-    margin-top: 73px;
-    margin-left: 86px;
-    border-radius: 30px;
-    background-color: rgba(34, 244, 218, 1);
+body{
+    margin: o;
 }
-h2{
-    text-align: center;
-    padding-top: 20px;
+.container{
+    width: 686px;
+    height: 464px;
+    background-color: rgba(0, 25, 249, 1);
+    position: relative;
+}
+.square{
+    width: 253px;
+    height: 190px;
+    background-color: rgba(248, 3, 3, 1);
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
